--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       </div>
       <div class="top-signup">
-        <a class="btn signup">新規登録はこちら</a>
+        <a class="btn signup" href="#">新規登録はこちら</a>
         <p>or</p>
-        <a class="btn facebook"><span class="fa fa-facebook"></span> facebookで登録</a>
-        <a class="btn twitter"><span class="fa fa-twitter"></span> Twitterで登録</a>
+        <a class="btn facebook" href="#"><span class="fa fa-facebook"></span> facebookで登録</a>
+        <a class="btn twitter" href="#"><span class="fa fa-twitter"></span> Twitterで登録</a>
       </div>
     </div>
   </div>
